[tool.poetry]
name = "quil-qol"
version = "0.1.0"
description = ""
authors = ["Quillzyy <shaquirearija1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
typer = {extras = ["all"], version = "^0.9.0"}

[tool.poetry.scripts]
quil-qol = "quil_qol.main:app"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
